# sakidb

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.ts
.claude/agent-memory/perf-memory-reviewer/: MEMORY.md
.claude/agents/: perf-memory-reviewer.md
.github/workflows/: changelog.yml  release.yml  test.yml
crates/sakidb-core/: Cargo.toml
crates/sakidb-core/benches/: core_benchmarks.rs
crates/sakidb-core/src/: driver.rs  error.rs  error_test.rs  lib.rs  sql.rs  sql_test.rs  types.rs  types_test.rs
crates/sakidb-core/tests/: stress.rs
crates/sakidb-oracle/: Cargo.toml
crates/sakidb-oracle/benches/: oracle_benchmarks.rs
crates/sakidb-oracle/src/: connection.rs  connection_test.rs  executor.rs  executor_test.rs  formatter.rs  formatter_test.rs  instantclient.rs  introspect.rs  introspect_test.rs  lib.rs  restore.rs  sql_split.rs
crates/sakidb-oracle/tests/: integration_test.rs
crates/sakidb-postgres/: Cargo.toml
crates/sakidb-postgres/benches/: postgres_benchmarks.rs
crates/sakidb-postgres/src/: connection.rs  executor.rs  executor_test.rs  formatter.rs  formatter_test.rs  introspect.rs  lib.rs  restore.rs  restore_test.rs
crates/sakidb-postgres/tests/: integration.rs  stress.rs
crates/sakidb-sqlite/: Cargo.toml
crates/sakidb-sqlite/benches/: sqlite_benchmarks.rs
crates/sakidb-sqlite/src/: connection.rs  executor.rs  executor_test.rs  formatter.rs  formatter_test.rs  introspect.rs  introspect_test.rs  lib.rs  restore.rs
crates/sakidb-sqlite/tests/: integration.rs  stress.rs
crates/sakidb-store/: Cargo.toml
crates/sakidb-store/src/: db.rs  db_test.rs  lib.rs  models.rs
docs/: DESIGN_PRINCIPLES.md  adding-a-driver.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  registry.rs  state.rs
src-tauri/src/commands/: connection.rs  connection_test.rs  explorer.rs  explorer_test.rs  export.rs  export_test.rs  import.rs  import_test.rs  mock_helpers.rs  mod.rs  queries.rs  queries_test.rs  query.rs  query_test.rs  settings.rs  settings_test.rs  sqlite.rs
src/lib/: binary-utils.ts  copy-utils.ts  image-utils.ts  sql-utils.ts  type-utils.ts  utils.ts
src/lib/commands/: definitions.ts  index.ts  registry.svelte.ts  types.ts
src/lib/components/data-view/: BinaryPreview.svelte  CellDisplay.svelte  CellEditor.svelte  CellExpandPopover.svelte  DataGrid.svelte  DataTabView.svelte  EditModeTutorial.svelte  GridBottomBar.svelte  GridContextMenu.svelte  GridFilterBar.svelte  RowDetailPanel.svelte  RowEditDialog.svelte
src/lib/components/erd/: ErdCanvas.svelte  ErdMinimap.svelte  ErdTabView.svelte  ErdTableNode.svelte  ErdToolbar.svelte
src/lib/components/query-editor/: CompareToolbar.svelte  CompareView.svelte  ExplainTableView.svelte  ExplainTreeView.svelte  ExplainViewer.svelte  QueryResultBar.svelte  QueryTabView.svelte  QueryToolbar.svelte  ResultTabBar.svelte
src/lib/components/settings/: KeybindingsSettings.svelte  SettingsDialog.svelte
src/lib/components/shell/: AboutDialog.svelte  CommandPalette.svelte  DropOverlay.svelte  ListPickerDialog.svelte  ResizeHandle.svelte  SplitPane.svelte  TabBar.svelte  TabGroupBar.svelte  TitleBar.svelte  Toast.svelte  UpdateBanner.svelte  UpdateDialog.svelte
src/lib/components/sidebar/: ConnectionEditDialog.svelte  ConnectionManager.svelte  ConnectionOnboarding.svelte  ConnectionTree.svelte  HighlightMatch.svelte  OracleDriverDialog.svelte  QueryList.svelte  QueryListItem.svelte  Sidebar.svelte
src/lib/components/sidebar/tree/: CategoryFolder.svelte  ColumnList.svelte  CreateFunctionDialog.svelte  CreateIndexDialog.svelte  CreateSequenceDialog.svelte  CreateTableDialog.svelte  CreateViewDialog.svelte  DatabaseNode.svelte  DuplicateTableDialog.svelte  EditDatabaseDialog.svelte  EditFunctionDialog.svelte  EditSequenceDialog.svelte  EditViewDialog.svelte  ForeignTableNode.svelte  FunctionNode.svelte  IndexNode.svelte  MaterializedViewNode.svelte  ObjectInfoRow.svelte  RestoreDialog.svelte  SchemaNode.svelte  SequenceNode.svelte  TableNode.svelte  ViewNode.svelte  VirtualTreeList.svelte
src/lib/components/structure/: BarChart.svelte  ColumnsSection.svelte  DdlPreview.svelte  ExportDialog.svelte  IndexesSection.svelte  PartitionsSection.svelte  ProfilingSection.svelte  RelationsSection.svelte  StructureTabView.svelte  TriggersSection.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/calendar/: calendar-cell.svelte  calendar-day.svelte  calendar-grid.svelte  calendar-head-cell.svelte  calendar-header.svelte  calendar-heading.svelte  calendar-months.svelte  calendar.svelte
src/lib/components/ui/combobox/: combobox-content.svelte  combobox-input.svelte  combobox-item.svelte  combobox-trigger.svelte  index.ts
src/lib/components/ui/confirm-dialog/: ConfirmDialog.svelte
src/lib/components/ui/context-menu/: context-menu-content.svelte  context-menu-item.svelte  context-menu-separator.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-overlay.svelte
src/lib/components/ui/input/: input.svelte
src/lib/context-menus/: ContextMenuRenderer.svelte  index.ts  menu-items.ts  types.ts
src/lib/dialects/: index.ts  oracle.ts  pg-types.ts  postgres.ts  sqlite-types.ts  sqlite.ts  types.ts
src/lib/dialects/__tests__/: dialects.test.ts
src/lib/stores/: connections.svelte.ts  data-tab.svelte.ts  exports.svelte.ts  index.ts  layout.svelte.ts  query-tab.svelte.ts  search.svelte.ts  shared.svelte.ts  structure-tab.svelte.ts  tabs.svelte.ts  updater.svelte.ts
src/lib/stores/__tests__/: connections.test.ts  data-tab.test.ts  query-tab.test.ts  setup.ts  tabs.test.ts
src/lib/types/: index.ts  query-result-data.ts
src/lib/utils/: ddl.ts  explain-parser.ts  fuzzy.ts  profiling-sql.ts  result-diff.ts  split-statements.ts  sql-completion.ts  sql-format.ts
src/routes/: +layout.svelte  +page.svelte
(+13 files in other folders)
