[package]
name = "sakidb-core"
version = "1.0.0"
description = "Shared traits, types, and error definitions for SakiDB"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
stress = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "core_benchmarks"
harness = false
