[package]
name = "sakidb-sqlite"
version = "1.0.0"
description = "SQLite driver for SakiDB using rusqlite with bundled SQLite"
license = "MIT"
edition = "2021"

[dependencies]
sakidb-core = { path = "../sakidb-core" }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[features]
integration = []
stress = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
futures = "0.3"

[[bench]]
name = "sqlite_benchmarks"
harness = false
