[package]
name = "sakidb-store"
version = "1.2.0"
description = "Credential and query storage for SakiDB"
license = "MIT"
edition = "2021"

[dependencies]
sakidb-core = { path = "../sakidb-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
